src/css/Triphikers.css
.tripHikersContainer{
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100vw;
    height: fit-content;
}

.tripHikersContext{
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    justify-content: space-evenly;
}

.tripHikersLeft {
    display: flex;
    flex-direction: column;
    width: 40%;
    height: fit-content;
}

.tripHikersRight {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 40%;
    height: fit-content;
    justify-content: space-between;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    border-radius: 5px;
    opacity: 0.85;
    cursor: default;
    padding: 1.5em;
    background-color: #31729b;
    border: solid 3px #1D3557;
    color: #F1FAEE;
}

.tripHikersRight:hover {
    transition: transform .5s ease;
    transform: scale(1.02);
}

.tripHikersTitle {
    margin-top: 1em;
    width: 89vw;
    height: fit-content;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    border-radius: 5px;
    opacity: 0.85;
    cursor: default;
    padding: .2em;
    margin-bottom: 1em;
    background-color: #31729b;
    border: solid 3px #1D3557;
    color: #F1FAEE;
}

.tripHikersTitle:hover {
    transition: transform .5s ease;
    transform: scale(1.02);
}

.videoContainer { 
    position: relative;
    padding-bottom: 56.25%;
    padding-top: 30px;
    height: 0;
    overflow: hidden;
    border-radius: 5px;
}

.videoContainer iframe, .videoContainer object, .videoContainer embed {
    position: absolute; 
    top: 0; 
    left: 0; 
    width: 100%; 
    height: 100%; 
}

.tripHikersVid {
    width: 100%;
    height: fit-content;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    border-radius: 5px;
    opacity: 0.85;
    cursor: default;
    padding: 1.5em;
    background-color: #31729b;
    border: solid 3px #1D3557;
    color: #F1FAEE;
    margin-bottom: 1em;
}

.tripHikersVid:hover {
    transition: transform .5s ease;
    transform: scale(1.02);
}

.tripHikersAbout{
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    height: fit-content;
    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
    transition: 0.3s;
    border-radius: 5px;
    opacity: 0.85;
    cursor: default;
    padding: 1.5em;
    background-color: #31729b;
    border: solid 3px #1D3557;
    color: #F1FAEE;
}

.tripHikersAbout:hover {
    transition: transform .5s ease;
    transform: scale(1.02);
}

.linkedInContainer { 
    position: relative;
    overflow: hidden;
    width: 100%;
    padding-top: 56.25%;
    height: 60vh;
    background-color: #31729b;
    border: solid 3px #1D3557;
    color: #F1FAEE;
    border-radius: 5px;
}

.linkedInContainer iframe {
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    width: 100%;
    height: 100%; 
}

.buttonsContainer {
    display: flex;
    justify-content: space-evenly;
    width: 100%;
    height: max-content;
    margin-bottom: 1em;
}

@media (max-width: 770px) {
    .tripHikersContainer {
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 100%;
        height: fit-content;
    }

    .tripHikersTitle {
        margin-top: 1em;
        width: 90vw;
        height: fit-content;

        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
        transition: 0.3s;
        border-radius: 5px;
        opacity: 0.85;
        cursor: default;
        padding: 1.5em;
        margin-bottom: 1em;
    }

    .tripHikersContext {
        display: flex;
        flex-direction: column;
        width: 90vw;
        align-items: center;
        justify-content: space-evenly;
    }

    .tripHikersLeft {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: space-between;
        width: 90vw;
        height: fit-content;
    }

    .tripHikersRight {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: space-between;
        width: 90vw;
        height: fit-content;

        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
        transition: 0.3s;
        border-radius: 5px;
        opacity: 0.85;
        cursor: default;
        padding: 1.5em;
        margin-bottom: 1em;
    }

    .videoContainer { 
        position: relative;
        padding-bottom: 56.25%;
        padding-top: 30px;
        height: 0;
        overflow: hidden;
    }
    
    .videoContainer iframe, .videoContainer object, .videoContainer embed {
        position: absolute; 
        top: 0; 
        left: 0; 
        width: 100%; 
        height: 100%; 
    }

    .tripHikersVid {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: space-between;
        width: 90vw;
        height: fit-content;

        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
        transition: 0.3s;
        border-radius: 5px;
        opacity: 0.85;
        cursor: default;
        padding: 1.5em;
        margin-bottom: 1em;
    }

    .tripHikersAbout {
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 90vw;
        height: fit-content;

        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
        transition: 0.3s;
        border-radius: 5px;
        opacity: 0.85;
        cursor: default;
        padding: 1.5em;
        margin-bottom: 1em;
    }

    .linkedInContainer { 
        position: relative;
        overflow: hidden;
        width: 100%;
        padding-top: 56.25%;
        height: 60vh;
    }
    
    .linkedInContainer iframe {
        position: absolute;
        top: 0;
        left: 0;
        bottom: 0;
        right: 0;
        width: 100%;
        height: 100%; 
    }
}

@media (max-width: 380px) {
    .tripHikersContainer {
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 100%;
        height: fit-content;
    }

    .tripHikersTitle {
        margin-top: 1em;
        width: 80vw;
        height: fit-content;
        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
        transition: 0.3s;
        border-radius: 5px;
        opacity: 0.85;
        cursor: default;
        padding: 1.5em;
        margin-bottom: 1em;
    }

    .tripHikersContext {
        display: flex;
        flex-direction: column;
        width: 80vw;
        align-items: center;
        justify-content: space-evenly;
    }

    .tripHikersLeft {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: flex-start;
        width: 80vw;
        height: fit-content;
    }

    .tripHikersRight {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: flex-start;
        width: 80vw;
        height: fit-content;
        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
        transition: 0.3s;
        border-radius: 5px;
        opacity: 0.85;
        cursor: default;
        padding: 1.5em;
        margin-bottom: 1em;
    }

    .videoContainer { 
        position: relative;
        padding-bottom: 56.25%;
        padding-top: 30px;
        height: 0;
        overflow: hidden;
    }
    
    .videoContainer iframe, .videoContainer object, .videoContainer embed {
        position: absolute; 
        top: 0; 
        left: 0; 
        width: 100%; 
        height: 100%; 
    }

    .tripHikersVid {
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: space-between;
        width: 80vw;
        height: fit-content;
        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
        transition: 0.3s;
        border-radius: 5px;
        opacity: 0.85;
        cursor: default;
        padding: 1.5em;
        margin-bottom: 1em;
    }

    .tripHikersAbout {
        display: flex;
        flex-direction: column;
        align-items: center;
        width: 80vw;
        height: fit-content;
        box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
        transition: 0.3s;
        border-radius: 5px;
        opacity: 0.85;
        cursor: default;
        padding: 1.5em;
        margin-bottom: 1em;
    }

    .linkedInContainer { 
        position: relative;
        overflow: hidden;
        width: 100%;
        padding-top: 56.25%;
        height: 60vh;
    }
    
    .linkedInContainer iframe {
        position: absolute;
        top: 0;
        left: 0;
        bottom: 0;
        right: 0;
        width: 100%;
        height: 100%; 
    }

    .buttonsContainer {
        display: flex;
        flex-direction: column;
        width: 100%;
        height: max-content;
        justify-content: space-evenly;
        height: 25vh;
        margin-bottom: 1em;
    }
}

